--- a/index.css
+++ b/index.css
@@ -42,3 +42,8 @@ display: flex;
 width: 20px;
 height: 20px;
 }
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
+}
