--- a/index.css
+++ b/index.css
@@ -1,68 +1,174 @@
-    *{
-        margin: 0;
-        padding: 0;
+    * {
+      margin: 0;
+      padding: 0;
     }
-    .nav_Container{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 20px;
-        height: 50px;
-    }
-    .logo_Conatiner{
 
+    .nav_Container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px;
+      height: 50px;
     }
-    .logo{
-     font-weight: 30px;
-    }
-    .link_container{
 
+    .logo_Conatiner {}
+
+    .logo {
+      font-weight: 30px;
     }
-    .link_container ul{
-    display: flex;
+
+    .link_container {}
+
+    .link_container ul {
+      display: flex;
     }
-    .link{
-        list-style: none;
-        padding: 0 10px;
+
+    .link {
+      list-style: none;
+      padding: 0 10px;
     }
-    .link a{
-        text-decoration: none;
-        color: black;
-        font-weight: 400;
-        font-size: 18px;
+
+    .link a {
+      text-decoration: none;
+      color: black;
+      font-weight: 400;
+      font-size: 18px;
     }
-    .link a:hover{
-        font-weight: 500;
+
+    .link a:hover {
+      font-weight: 500;
     }
-    .link_icon{
-        display: flex;
-        gap: 10px;
+
+    .link_icon {
+      display: flex;
+      gap: 10px;
     }
-    .link .icon{
-    width: 20px;
-    height: 20px;
+
+    .link .icon {
+      width: 20px;
+      height: 20px;
     }
-    #hello{
-        background-color: red;
+
+    #hello {
+      background-color: red;
     }
-    @media screen and (max-width: 600px) {
-      /* CSS styles to apply when screen width is 600px or less */
-      /* For example: */
-      body {
-        background-color: lightblue;
+
+
+
+    @media screen and (max-width: 360px) {
+      .link_container {
+        position: absolute;
+        /* left: 35%; */
+        top: 30%;
+        width: 150%;
+        /* background-color: gray; */
+        visibility: hidden;
+        transition:.3s ease ;
+
 
       }
-      #hello{
-        background-color: lightblue;
+      .link_container.active{
+        visibility: visible;
+        /* transition:.3s ease ; */
+
+      }
+
+    .link_container ul {
+      display: grid;
+        justify-content: center;
     }
+
+    .link {
+      margin: 15px;
+      max-width: 120px;
+      display: flex;
+      justify-content: center;
     }
-    @media screen and (max-width: 360px) {
-      /* CSS styles to apply when screen width is 600px or less */
-      /* For example: */
-      body {
-        background-color: red;
-      }  
-      #hello{
-        background-color: bluea;
+
+    .link a {
+      text-decoration: none;
+      color: black;
+      font-weight: 400;
+      font-size: 30px;
+  }
     }
+
+    /* .link a:hover {
+      font-weight: 500;
+    } */
+
+    /* .link_icon {
+      display: flex;
+      gap: 10px;
+    } */
+
+    /* .link .icon {
+      width: 20px;
+      height: 20px;
+    }
+ */
+
+
+
+
+      .nav_Container {
+        padding: 30px;
+      }
+
+      .logo_Conatiner {
+        width: 500px;
+      }
+
+      .logo {
+        font-weight: 30px;
+        width: 500px;
+        font-size: 40px;
+      }
+
+      /* .link_container {
+        visibility: hidden;
+      } */
+
+      .ham-menu {
+        height: 50px;
+        width: 50px;
+        margin-left: auto;
+        position: absolute;
+      }
+
+      .ham-menu span {
+        height: 5px;
+        width: 100%;
+        background-color: #1a1a1a;
+        border-radius: 25px;
+        position: absolute;
+        top: 50%;
+        left: 500px;
+        transform: translate(-50%, -50%);
+        transition:.3s ease ;
+      }
+
+      .ham-menu span:nth-child(1) {
+        top: 25%;
+      }
+
+      .ham-menu span:nth-child(3) {
+        top: 75%;
+      }
+
+      .ham-menu.active span:nth-child(1) {
+        top: 60%;
+        transform: translate(-50%, -50%) rotate(45deg);
+      }
+
+      .ham-menu.active span:nth-child(2) {
+        opacity: 0;
+      }
+
+      .ham-menu.active span:nth-child(3) {
+        top: 50%;
+        transform: translate(-50%, 50%) rotate(-45deg);
+      }
+
+
     }
