--- a/index.css
+++ b/index.css
@@ -60,7 +60,7 @@
         position: absolute;
         /* left: 35%; */
         top: 30%;
-        width: 150%;
+width: 215vw;
         /* background-color: gray; */
         visibility: hidden;
         transition:.3s ease ;
@@ -90,7 +90,7 @@
       color: black;
       font-weight: 400;
       font-size: 30px;
-  }
+  
     }
 
     /* .link a:hover {
